--- a/src/pages/Artists/styles.css
+++ b/src/pages/Artists/styles.css
@@ -21,8 +21,18 @@
     margin-top: 0;
 }
 
+.artist-container nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    background: #ffffff;
+    padding: 12px
+}
+
+
 .artist-container h1 {
-    margin-top: 80px;
+    margin-top: 20px;
     margin-bottom: 24px;
 }
 
